compiler/src/test/resources/golden/errors/type_alias_shape_needs_alias_keyword.dawn
type Handler[T] = fn(T) -> Int

pub fn main() -> Unit !io = println("x")
