compiler/src/test/resources/golden/errors/type_alias_shape_needs_alias_keyword.err
error: `type` declares a nominal type (constructors or a record); this is an alias
  --> type_alias_shape_needs_alias_keyword.dawn:1:1
  |
1 | type Handler[T] = fn(T) -> Int
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = hint: write `alias Handler[T] = ...` instead
